Polish 'Support lambda based converters via bean method signature generics'
See gh-22885