@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,18 +17,19 @@
 package org.springframework.boot.convert;
 
 import java.lang.annotation.Annotation;
-import java.util.Collections;
-import java.util.LinkedHashSet;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.BiFunction;
+import java.util.function.Consumer;
+import java.util.function.Supplier;
 
 import org.springframework.beans.factory.ListableBeanFactory;
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.i18n.LocaleContextHolder;
-import org.springframework.core.GenericTypeResolver;
 import org.springframework.core.ResolvableType;
 import org.springframework.core.convert.ConversionService;
 import org.springframework.core.convert.TypeDescriptor;
@@ -48,6 +49,7 @@ import org.springframework.format.Parser;
 import org.springframework.format.Printer;
 import org.springframework.format.support.DefaultFormattingConversionService;
 import org.springframework.format.support.FormattingConversionService;
+import org.springframework.util.Assert;
 import org.springframework.util.StringUtils;
 import org.springframework.util.StringValueResolver;
 
@@ -61,10 +63,12 @@ import org.springframework.util.StringValueResolver;
  * against registry instance.
  *
  * @author Phillip Webb
- * @author Shixiong Guo(viviel)
+ * @author Shixiong Guo
  * @since 2.0.0
  */
 public class ApplicationConversionService extends FormattingConversionService {
+
+	private static final ResolvableType STRING = ResolvableType.forClass(String.class);
 
 	private static volatile ApplicationConversionService sharedInstance;
 
@@ -278,301 +282,205 @@ public class ApplicationConversionService extends FormattingConversionService {
 	}
 
 	/**
-	 * Add {@link GenericConverter}, {@link Converter}, {@link Printer}, {@link Parser}
-	 * and {@link Formatter} beans from the specified context.
+	 * Add {@link Printer}, {@link Parser}, {@link Formatter}, {@link Converter},
+	 * {@link ConverterFactory}, {@link GenericConverter}, and beans from the specified
+	 * bean factory.
 	 * @param registry the service to register beans with
 	 * @param beanFactory the bean factory to get the beans from
 	 * @since 2.2.0
 	 */
 	public static void addBeans(FormatterRegistry registry, ListableBeanFactory beanFactory) {
-		Set<Map.Entry<String, ?>> entries = new LinkedHashSet<>();
-		entries.addAll(beanFactory.getBeansOfType(GenericConverter.class).entrySet());
-		entries.addAll(beanFactory.getBeansOfType(Converter.class).entrySet());
-		entries.addAll(beanFactory.getBeansOfType(Printer.class).entrySet());
-		entries.addAll(beanFactory.getBeansOfType(Parser.class).entrySet());
-		for (Map.Entry<String, ?> e : entries) {
-			String beanName = e.getKey();
-			Object bean = e.getValue();
-			try {
-				doAddBean(registry, bean);
-			}
-			catch (IllegalArgumentException ex) {
-				if (!tryAddFactoryMethodBean(registry, beanFactory, beanName, bean)) {
-					throw ex;
-				}
-			}
-		}
-	}
-
-	private static void doAddBean(FormatterRegistry registry, Object bean) {
-		if (bean instanceof GenericConverter) {
-			registry.addConverter((GenericConverter) bean);
-		}
-		else if (bean instanceof Converter) {
-			registry.addConverter((Converter<?, ?>) bean);
-		}
-		else if (bean instanceof Formatter) {
-			registry.addFormatter((Formatter<?>) bean);
-		}
-		else if (bean instanceof Printer) {
-			registry.addPrinter((Printer<?>) bean);
-		}
-		else if (bean instanceof Parser) {
-			registry.addParser((Parser<?>) bean);
-		}
-	}
-
-	private static boolean tryAddFactoryMethodBean(FormatterRegistry registry, ListableBeanFactory beanFactory,
-			String beanName, Object bean) {
-		ConfigurableListableBeanFactory clbf = getConfigurableListableBeanFactory(beanFactory);
-		if (clbf == null) {
-			return false;
-		}
-		if (!isFactoryMethod(clbf, beanName)) {
-			return false;
-		}
-		if (bean instanceof Converter) {
-			return addConverter(registry, clbf, beanName, (Converter<?, ?>) bean);
-		}
-		else if (bean instanceof Printer) {
-			return addPrinter(registry, clbf, beanName, (Printer<?>) bean);
-		}
-		else if (bean instanceof Parser) {
-			return addParser(registry, clbf, beanName, (Parser<?>) bean);
-		}
-		return false;
+		ConfigurableListableBeanFactory configurableBeanFactory = getConfigurableListableBeanFactory(beanFactory);
+		getBeans(beanFactory).forEach((beanName, bean) -> {
+			BeanDefinition beanDefinition = (configurableBeanFactory != null)
+					? configurableBeanFactory.getMergedBeanDefinition(beanName) : null;
+			ResolvableType type = (beanDefinition != null) ? beanDefinition.getResolvableType() : null;
+			addBean(registry, bean, type);
+		});
 	}
 
 	private static ConfigurableListableBeanFactory getConfigurableListableBeanFactory(ListableBeanFactory beanFactory) {
-		ListableBeanFactory bf = beanFactory;
-		if (bf instanceof ConfigurableApplicationContext) {
-			bf = ((ConfigurableApplicationContext) bf).getBeanFactory();
+		if (beanFactory instanceof ConfigurableApplicationContext applicationContext) {
+			return applicationContext.getBeanFactory();
 		}
-		if (bf instanceof ConfigurableListableBeanFactory) {
-			return (ConfigurableListableBeanFactory) bf;
+		if (beanFactory instanceof ConfigurableListableBeanFactory configurableListableBeanFactory) {
+			return configurableListableBeanFactory;
 		}
 		return null;
 	}
 
-	private static boolean isFactoryMethod(ConfigurableListableBeanFactory clbf, String beanName) {
-		BeanDefinition bd = clbf.getMergedBeanDefinition(beanName);
-		return bd.getFactoryMethodName() != null;
+	private static Map<String, Object> getBeans(ListableBeanFactory beanFactory) {
+		Map<String, Object> beans = new LinkedHashMap<>();
+		beans.putAll(getBeans(beanFactory, Printer.class));
+		beans.putAll(getBeans(beanFactory, Parser.class));
+		beans.putAll(getBeans(beanFactory, Formatter.class));
+		beans.putAll(getBeans(beanFactory, Converter.class));
+		beans.putAll(getBeans(beanFactory, ConverterFactory.class));
+		beans.putAll(getBeans(beanFactory, GenericConverter.class));
+		return beans;
 	}
 
-	private static boolean addConverter(FormatterRegistry registry, ConfigurableListableBeanFactory beanFactory,
-			String beanName, Converter<?, ?> converter) {
-		ConverterAdapter adapter = getConverterAdapter(beanFactory, beanName, converter);
-		if (adapter == null) {
-			return false;
+	private static <T> Map<String, T> getBeans(ListableBeanFactory beanFactory, Class<T> type) {
+		return beanFactory.getBeansOfType(type);
+	}
+
+	static void addBean(FormatterRegistry registry, Object bean, ResolvableType beanType) {
+		if (bean instanceof GenericConverter converterBean) {
+			addBean(registry, converterBean, beanType, GenericConverter.class, registry::addConverter, (Runnable) null);
 		}
-		registry.addConverter(adapter);
-		return true;
-	}
-
-	private static ConverterAdapter getConverterAdapter(ConfigurableListableBeanFactory beanFactory, String beanName,
-			Converter<?, ?> converter) {
-		ResolvableType[] types = getResolvableType(beanFactory, beanName);
-		if (types.length < 2) {
-			return null;
+		else if (bean instanceof Converter<?, ?> converterBean) {
+			addBean(registry, converterBean, beanType, Converter.class, registry::addConverter,
+					ConverterBeanAdapter::new);
 		}
-		return new ConverterAdapter(converter, types[0], types[1]);
-	}
-
-	private static ResolvableType[] getResolvableType(ConfigurableListableBeanFactory beanFactory, String beanName) {
-		BeanDefinition beanDefinition = beanFactory.getMergedBeanDefinition(beanName);
-		ResolvableType resolvableType = beanDefinition.getResolvableType();
-		return resolvableType.getGenerics();
-	}
-
-	private static boolean addPrinter(FormatterRegistry registry, ConfigurableListableBeanFactory beanFactory,
-			String beanName, Printer<?> printer) {
-		PrinterAdapter adapter = getPrinterAdapter(beanFactory, beanName, printer);
-		if (adapter == null) {
-			return false;
+		else if (bean instanceof ConverterFactory<?, ?> converterBean) {
+			addBean(registry, converterBean, beanType, ConverterFactory.class, registry::addConverterFactory,
+					ConverterFactoryBeanAdapter::new);
 		}
-		registry.addConverter(adapter);
-		return true;
+		else if (bean instanceof Formatter<?> formatterBean) {
+			addBean(registry, formatterBean, beanType, Formatter.class, registry::addFormatter, () -> {
+				registry.addConverter(new PrinterBeanAdapter(formatterBean, beanType));
+				registry.addConverter(new ParserBeanAdapter(formatterBean, beanType));
+			});
+		}
+		else if (bean instanceof Printer<?> printerBean) {
+			addBean(registry, printerBean, beanType, Printer.class, registry::addPrinter, PrinterBeanAdapter::new);
+		}
+		else if (bean instanceof Parser<?> parserBean) {
+			addBean(registry, parserBean, beanType, Parser.class, registry::addParser, ParserBeanAdapter::new);
+		}
 	}
 
-	private static PrinterAdapter getPrinterAdapter(ConfigurableListableBeanFactory beanFactory, String beanName,
-			Printer<?> printer) {
-		ResolvableType[] types = getResolvableType(beanFactory, beanName);
-		if (types.length < 1) {
-			return null;
-		}
-		ConversionService conversionService = beanFactory.getBean(ConversionService.class);
-		return new PrinterAdapter(types[0].resolve(), printer, conversionService);
+	private static <B, T> void addBean(FormatterRegistry registry, B bean, ResolvableType beanType, Class<T> type,
+			Consumer<B> standardRegistrar, BiFunction<B, ResolvableType, BeanAdapter<?>> beanAdapterFactory) {
+		addBean(registry, bean, beanType, type, standardRegistrar,
+				() -> registry.addConverter(beanAdapterFactory.apply(bean, beanType)));
 	}
 
-	private static boolean addParser(FormatterRegistry registry, ConfigurableListableBeanFactory beanFactory,
-			String beanName, Parser<?> parser) {
-		ParserAdapter adapter = getParserAdapter(beanFactory, beanName, parser);
-		if (adapter == null) {
-			return false;
+	private static <B, T> void addBean(FormatterRegistry registry, B bean, ResolvableType beanType, Class<T> type,
+			Consumer<B> standardRegistrar, Runnable beanAdapterRegistrar) {
+		if (beanType != null && beanAdapterRegistrar != null
+				&& ResolvableType.forInstance(bean).as(type).hasUnresolvableGenerics()) {
+			beanAdapterRegistrar.run();
+			return;
 		}
-		registry.addConverter(adapter);
-		return true;
-	}
-
-	private static ParserAdapter getParserAdapter(ConfigurableListableBeanFactory beanFactory, String beanName,
-			Parser<?> parser) {
-		ResolvableType[] types = getResolvableType(beanFactory, beanName);
-		if (types.length < 1) {
-			return null;
-		}
-		ConversionService conversionService = beanFactory.getBean(ConversionService.class);
-		return new ParserAdapter(types[0].resolve(), parser, conversionService);
+		standardRegistrar.accept(bean);
 	}
 
 	/**
-	 * Adapts a {@link Converter} to a {@link GenericConverter}.
-	 * <p>
-	 * Reference from
-	 * {@link org.springframework.core.convert.support.GenericConversionService.ConverterAdapter}
+	 * Base class for adapters that adapt a bean to a {@link GenericConverter}.
+	 *
+	 * @param <B> the base type of the bean
 	 */
-	@SuppressWarnings("unchecked")
-	private static final class ConverterAdapter implements ConditionalGenericConverter {
+	abstract static class BeanAdapter<B> implements ConditionalGenericConverter {
 
-		private final Converter<Object, Object> converter;
+		private final B bean;
 
-		private final ConvertiblePair typeInfo;
+		private final ResolvableTypePair types;
 
-		private final ResolvableType targetType;
+		BeanAdapter(B bean, ResolvableType beanType) {
+			Assert.isInstanceOf(beanType.toClass(), bean);
+			ResolvableType type = ResolvableType.forClass(getClass()).as(BeanAdapter.class).getGeneric();
+			ResolvableType[] generics = beanType.as(type.toClass()).getGenerics();
+			this.bean = bean;
+			this.types = getResolvableTypePair(generics);
+		}
 
-		ConverterAdapter(Converter<?, ?> converter, ResolvableType sourceType, ResolvableType targetType) {
-			this.converter = (Converter<Object, Object>) converter;
-			this.typeInfo = new ConvertiblePair(sourceType.toClass(), targetType.toClass());
-			this.targetType = targetType;
+		protected ResolvableTypePair getResolvableTypePair(ResolvableType[] generics) {
+			return new ResolvableTypePair(generics[0], generics[1]);
+		}
+
+		protected B bean() {
+			return this.bean;
 		}
 
 		@Override
 		public Set<ConvertiblePair> getConvertibleTypes() {
-			return Collections.singleton(this.typeInfo);
+			return Set.of(new ConvertiblePair(this.types.source().toClass(), this.types.target().toClass()));
 		}
 
 		@Override
 		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
-			// Check raw type first...
-			if (this.typeInfo.getTargetType() != targetType.getObjectType()) {
-				return false;
-			}
-			// Full check for complex generic type match required?
-			ResolvableType rt = targetType.getResolvableType();
-			if (!(rt.getType() instanceof Class) && !rt.isAssignableFrom(this.targetType)
-					&& !this.targetType.hasUnresolvableGenerics()) {
-				return false;
-			}
-			return !(this.converter instanceof ConditionalConverter)
-					|| ((ConditionalConverter) this.converter).matches(sourceType, targetType);
+			return (this.types.target().toClass() == targetType.getObjectType()
+					&& matchesTargetType(targetType.getResolvableType()));
 		}
 
-		@Override
-		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
-			if (source == null) {
-				return convertNullSource(sourceType, targetType);
-			}
-			return this.converter.convert(source);
+		private boolean matchesTargetType(ResolvableType targetType) {
+			ResolvableType ours = this.types.target();
+			return targetType.getType() instanceof Class || targetType.isAssignableFrom(ours)
+					|| this.types.target().hasUnresolvableGenerics();
+		}
+
+		protected final boolean conditionalConverterCandidateMatches(Object conditionalConverterCandidate,
+				TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return (conditionalConverterCandidate instanceof ConditionalConverter conditionalConverter)
+					? conditionalConverter.matches(sourceType, targetType) : true;
+		}
+
+		@SuppressWarnings({ "unchecked", "rawtypes" })
+		protected final Object convert(Object source, TypeDescriptor targetType, Converter<?, ?> converter) {
+			return (source != null) ? ((Converter) converter).convert(source) : convertNull(targetType);
+		}
+
+		private Object convertNull(TypeDescriptor targetType) {
+			return (targetType.getObjectType() != Optional.class) ? null : Optional.empty();
 		}
 
 		@Override
 		public String toString() {
-			return (this.typeInfo + " : " + this.converter);
-		}
-
-		/**
-		 * Template method to convert a {@code null} source.
-		 * <p>
-		 * The default implementation returns {@code null} or the Java 8
-		 * {@link java.util.Optional#empty()} instance if the target type is
-		 * {@code java.util.Optional}. Subclasses may override this to return custom
-		 * {@code null} objects for specific target types.
-		 * @param sourceType the source type to convert from
-		 * @param targetType the target type to convert to
-		 * @return the converted null object
-		 */
-		private Object convertNullSource(TypeDescriptor sourceType, TypeDescriptor targetType) {
-			if (targetType.getObjectType() == Optional.class) {
-				return Optional.empty();
-			}
-			return null;
+			return this.types + " : " + this.bean;
 		}
 
 	}
 
-	private static class PrinterAdapter implements GenericConverter {
+	/**
+	 * Adapts a {@link Printer} bean to a {@link GenericConverter}.
+	 */
+	static class PrinterBeanAdapter extends BeanAdapter<Printer<?>> {
 
-		private final Class<?> fieldType;
-
-		private final TypeDescriptor printerObjectType;
-
-		@SuppressWarnings("rawtypes")
-		private final Printer printer;
-
-		private final ConversionService conversionService;
-
-		PrinterAdapter(Class<?> fieldType, Printer<?> printer, ConversionService conversionService) {
-			this.fieldType = fieldType;
-			this.printerObjectType = TypeDescriptor.valueOf(resolvePrinterObjectType(printer));
-			this.printer = printer;
-			this.conversionService = conversionService;
+		PrinterBeanAdapter(Printer<?> bean, ResolvableType beanType) {
+			super(bean, beanType);
 		}
 
 		@Override
-		public Set<ConvertiblePair> getConvertibleTypes() {
-			return Collections.singleton(new ConvertiblePair(this.fieldType, String.class));
+		protected ResolvableTypePair getResolvableTypePair(ResolvableType[] generics) {
+			return new ResolvableTypePair(generics[0], STRING);
 		}
 
 		@Override
+		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return (source != null) ? print(source) : "";
+		}
+
 		@SuppressWarnings("unchecked")
-		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
-			if (!sourceType.isAssignableTo(this.printerObjectType)) {
-				source = this.conversionService.convert(source, sourceType, this.printerObjectType);
-			}
-			if (source == null) {
-				return "";
-			}
-			return this.printer.print(source, LocaleContextHolder.getLocale());
-		}
-
-		private Class<?> resolvePrinterObjectType(Printer<?> printer) {
-			return GenericTypeResolver.resolveTypeArgument(printer.getClass(), Printer.class);
-		}
-
-		@Override
-		public String toString() {
-			return (this.fieldType.getName() + " -> " + String.class.getName() + " : " + this.printer);
+		private String print(Object object) {
+			return ((Printer<Object>) bean()).print(object, LocaleContextHolder.getLocale());
 		}
 
 	}
 
-	private static class ParserAdapter implements GenericConverter {
+	/**
+	 * Adapts a {@link Parser} bean to a {@link GenericConverter}.
+	 */
+	static class ParserBeanAdapter extends BeanAdapter<Parser<?>> {
 
-		private final Class<?> fieldType;
-
-		private final Parser<?> parser;
-
-		private final ConversionService conversionService;
-
-		ParserAdapter(Class<?> fieldType, Parser<?> parser, ConversionService conversionService) {
-			this.fieldType = fieldType;
-			this.parser = parser;
-			this.conversionService = conversionService;
+		ParserBeanAdapter(Parser<?> bean, ResolvableType beanType) {
+			super(bean, beanType);
 		}
 
 		@Override
-		public Set<ConvertiblePair> getConvertibleTypes() {
-			return Collections.singleton(new ConvertiblePair(String.class, this.fieldType));
+		protected ResolvableTypePair getResolvableTypePair(ResolvableType[] generics) {
+			return new ResolvableTypePair(STRING, generics[0]);
 		}
 
 		@Override
 		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
 			String text = (String) source;
-			if (!StringUtils.hasText(text)) {
-				return null;
-			}
-			Object result;
+			return (!StringUtils.hasText(text)) ? null : parse(text);
+		}
+
+		private Object parse(String text) {
 			try {
-				result = this.parser.parse(text, LocaleContextHolder.getLocale());
+				return bean().parse(text, LocaleContextHolder.getLocale());
 			}
 			catch (IllegalArgumentException ex) {
 				throw ex;
@@ -580,16 +488,76 @@ public class ApplicationConversionService extends FormattingConversionService {
 			catch (Throwable ex) {
 				throw new IllegalArgumentException("Parse attempt failed for value [" + text + "]", ex);
 			}
-			TypeDescriptor resultType = TypeDescriptor.valueOf(result.getClass());
-			if (!resultType.isAssignableTo(targetType)) {
-				result = this.conversionService.convert(result, resultType, targetType);
-			}
-			return result;
+		}
+
+	}
+
+	/**
+	 * Adapts a {@link Converter} bean to a {@link GenericConverter}.
+	 */
+	static final class ConverterBeanAdapter extends BeanAdapter<Converter<?, ?>> {
+
+		ConverterBeanAdapter(Converter<?, ?> bean, ResolvableType beanType) {
+			super(bean, beanType);
 		}
 
 		@Override
-		public String toString() {
-			return (String.class.getName() + " -> " + this.fieldType.getName() + ": " + this.parser);
+		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return super.matches(sourceType, targetType)
+					&& conditionalConverterCandidateMatches(bean(), sourceType, targetType);
+		}
+
+		@Override
+		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return convert(source, targetType, bean());
+		}
+
+	}
+
+	/**
+	 * Adapts a {@link ConverterFactory} bean to a {@link GenericConverter}.
+	 */
+	private static final class ConverterFactoryBeanAdapter extends BeanAdapter<ConverterFactory<?, ?>> {
+
+		ConverterFactoryBeanAdapter(ConverterFactory<?, ?> bean, ResolvableType beanType) {
+			super(bean, beanType);
+		}
+
+		@Override
+		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return super.matches(sourceType, targetType)
+					&& conditionalConverterCandidateMatches(bean(), sourceType, targetType)
+					&& conditionalConverterCandidateMatches(getConverter(targetType::getType), sourceType, targetType);
+		}
+
+		@Override
+		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return convert(source, targetType, getConverter(targetType::getObjectType));
+		}
+
+		@SuppressWarnings({ "unchecked", "rawtypes" })
+		private Converter<Object, ?> getConverter(Supplier<Class<?>> typeSupplier) {
+			return ((ConverterFactory) bean()).getConverter(typeSupplier.get());
+		}
+
+	}
+
+	/**
+	 * Convertible type information as extracted from bean generics.
+	 *
+	 * @param source the source type
+	 * @param target the target type
+	 */
+	record ResolvableTypePair(ResolvableType source, ResolvableType target) {
+
+		ResolvableTypePair {
+			Assert.notNull(source.resolve(), "'source' cannot be resolved");
+			Assert.notNull(target.resolve(), "'target' cannot be resolved");
+		}
+
+		@Override
+		public final String toString() {
+			return source() + " -> " + target();
 		}
 
 	}
